# rough-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  PLAN.md  README.md
.beads/: config.yaml  issues.jsonl
.github/workflows/: ci.yml
benches/: primitives.rs
docs/: parity-audit.md  release-checklist.md  roughjs-compatibility.md
examples/: basic.rs  complex_showcase.rs  excalidraw_element.rs
src/: core.rs  generator.rs  geometry.rs  lib.rs  math.rs  renderer.rs  svg.rs
src/fillers/: dots.rs  hachure.rs  mod.rs  solid.rs
tests/: comprehensive_parity.rs  generator_ellipse.rs  generator_line_rectangle.rs  generator_path.rs  generator_remaining_primitives.rs  options.rs  reference_fixture.rs  scaffold.rs
verify/: README.md  generate_reference.mjs
