[package]
name = "rough-rs"
version = "0.1.0"
edition = "2021"
description = "Pure Rust rough.js-compatible sketchy SVG path generation"
license = "MIT"
repository = "https://github.com/quangdang46/rough-rs"
readme = "README.md"
keywords = ["roughjs", "svg", "graphics", "sketch", "excalidraw"]
categories = ["graphics", "rendering"]

[dependencies]
rand = { version = "0.8", optional = true, default-features = false, features = ["std", "std_rng"] }
svgtypes = { version = "0.15", optional = true }

[dev-dependencies]
approx = "0.5"
serde_json = "1"

[features]
default = ["rand", "svg_path"]
svg_path = ["dep:svgtypes"]
